--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ EJS is also a popular templating engine for Node.js. In this tutorial 'EJS' will
 npm install ejs</font>
 </code></pre>
 
-<p>Let's how to use the 'express' for handling the http requests.  Use the 'require' method to import the express library to the node script.  By passing the express object 'app' 
+<p>Let's see how to use the 'express' for handling the http requests.  Use the 'require' method to import the express library to the node script.  By passing the express object 'app' 
 as an argument to the 'createServer' method,  all the incoming http requests can be handled by the express framework.  Save the below script as 'accessmongo.js' and 
-run the script as 'node accessmongo.js'.  Access the url 'http://localhost:3000' in the browser, Bingo !  Welcome to Technoons ! </p>
+run the script as 'node accessmongo.js'.  Access the url 'http://localhost:3000' in the browser, Bingo !  <font color="blue">Welcome to Technoons!</font> </p>
 
 <pre><code>var express = require('express'),
 http = require('http');
@@ -153,7 +153,7 @@ function renderResult(res, prds, msg) {
 <p>Invoke the URL <font color="blue">http://localhost:3000/viewall</font>. All the records in the "Products" collection in MongoDB will be displayed in this page.</p>
 <image src="https://f.cloud.github.com/assets/6375258/1893807/03518766-7ab8-11e3-9020-4b6266a04b7b.PNG"/>
 <p>Try yourself : Retrieve a record from MongoDB with a condition and display.  e.g. find a product with id 'prd5555'. </p>
-<pre><code><font color="blue">Happy Coding !</font></code></pre>
+<p><font color="blue">Happy Coding !</font></p>
 
 </section>
 </div>
