--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section id="main_content" class="inner">
 <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
 
-<p>Technical Lessons from Technoon. Lets go Technical !</p>
+<p>Technical Tutorials from Technoon. Lets go Technical !</p>
 <h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Node.js, Express, EJS, Mongoose & MongoDB</h3>
 <p>This tutorial requires basic knowledge in Node.js & MongoDB.  The 'mongoose' node module can be used to access the MongoDB from Node.js.  Express is a 
 web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
@@ -81,7 +81,7 @@ res.render('index.ejs');
 <p>For accessing the collections in the MongoDB the node module 'Mongoose' can be used.  Install the Mongoose and include it in the 'accessmongo.js' as a required module.
 </p>
 
-<pre><code>npm install mongoose</code></pre>
+<pre><code><font color="red">npm install mongoose</font></code></pre>
 <pre><code>mongoose = require('mongoose');</code></pre>
 
 <p>Mongoose module provides the easy access to MongoDB.  MongoDB comes with a default database called 'test', for this example this 'test' database will be used. 
@@ -125,7 +125,7 @@ app.post('/new', function(req, res){
 	});
 });</code></pre>
 
-<p> Invoke the URL <font color="blue">http://localhost:3000/add</font> and submit the form.  Congratulations !!! You have now learnt how to insert a record into MongoDB collection. </p>
+<p> Invoke the URL <font color="blue">'http://localhost:3000/add'</font> and submit the form.  Congratulations !!! You have now learnt how to insert a record into MongoDB collection. </p>
 
 <!-- View All -->
 <h3><a name="viewall" class="anchor" href="#viewall"><span class="octicon octicon-link"></span></a>Viewing all the records</h3>
