--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ res.render('index.ejs');
 <pre><code>mongoose.connect('mongodb://localhost/test');</code></pre>
 
 <p>Create a MongoDB schema & a collection to store the product details using the below script. Create a reference to the 'product' object which uniquely represents a record in the collection. 
-When this code gets executed, MongoDB creates a collection named "Products'.  Note: It adds 's' to the model name given.</p>
+When this code gets executed, MongoDB creates a collection named "Products'.</p>
 
 <pre><code>var productSchema = new mongoose.Schema({
 	prdId: String,
