--- a/arduino.html
+++ b/arduino.html
@@ -23,32 +23,29 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>Welcome to Tech-noons</h3>
-<p>
-Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.  
-It’s great for hardware prototyping and one-off projects.
-
-Arduino is a tool for making computers that can sense and control more of the physical world than your desktop computer.
-
+<p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.  
+It’s great for hardware prototyping and one-off projects. Arduino is a tool for making computers that can sense and control more of the physical world than your desktop computer.
 There are many other microcontrollers and microcontroller platforms available for physical computing. Arduino stands top of those platforms. 
-
 More details can be found in ardunino.cc.
 </p>
 
 <h3><a name="welcome-to-tech-noons" class="anchor" href="#welcome-to-tech-noons"><span class="octicon octicon-link"></span></a>PIN configuration in Ardunio Leonardo</h3>
 <p>
-Microcontroller					ATmega32u4
-Operating Voltage				5V
-Input Voltage (recommended)		7-12V
-Input Voltage (limits)			6-20V
-Digital I/O Pins				20
-PWM Channels					7
-Analog Input Channels			12
-DC Current per I/O Pin			40 mA
-DC Current for 3.3V Pin			50 mA
-Flash Memory					32 KB (ATmega32u4) of which 4 KB used by bootloader
-SRAM							2.5 KB (ATmega32u4)
-EEPROM							1 KB (ATmega32u4)
-Clock Speed						16 MHz
+<table border=0>
+<tr><td>Microcontroller</td><td>ATmega32u4</td></tr>
+<tr><td>Operating Voltage</td><td>5V</td></tr>
+<tr><td>Input Voltage (recommended)</td><td>7-12V</td></tr>
+<tr><td>Input Voltage (limits)</td><td>6-20V</td></tr>
+<tr><td>Digital I/O Pins</td><td>20</td></tr>
+<tr><td>PWM Channels</td><td>7</td></tr>
+<tr><td>Analog Input Channels</td><td>12</td></tr>
+<tr><td>DC Current per I/O Pin</td><td>40 mA</td></tr>
+<tr><td>DC Current for 3.3V Pin</td><td>50 mA</td></tr>
+<tr><td>Flash Memory</td><td>32 KB (ATmega32u4) of which 4 KB used by bootloader</td></tr>
+<tr><td>SRAM</td><td>2.5 KB (ATmega32u4)</td></tr>
+<tr><td>EEPROM</td><td>1 KB (ATmega32u4)</td></tr>
+<tr><td>Clock Speed</td><td>16 MHz</td></tr>
+</table>
 </p>
 
 
