--- a/arduino.html
+++ b/arduino.html
@@ -64,21 +64,22 @@ Using these program sketches, variety of sensors can be controlled and the outpu
 Let's see how can the output value from a potentiometer can be read and logged into serial monitor. <br>
 Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires <br><br>
 
-<font color="Maroon">Step 3:</font> Connect the Arduino board to the computer thru USB.<br>
-<font color="Maroon">Step2 :</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & ouput.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor 
+<font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB.<br>
+<font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & ouput.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor 
 and output pin to the digital pin 2. The wiring diagram is given below. <br>
-<font color="Maroon">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
-<font color="Maroon">Step 3:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
+<font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
+<font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
 <br>
-<code><font color="Maroon">Note: Now, using this incoming value from the POT, you can control the brightness of an LED or 
-reduce the rotation speed of a DC motor or control the direction of a SERVO motor. Options are plenty.</font></code>
+<code><font color="blue">Note: Using this incoming value from the POT, you can control the brightness of an LED or reduce the rotation 
+speed of a DC motor or control the direction of a SERVO motor. Options are plenty.</font></code>
 </p>
 
 <image src="https://f.cloud.github.com/assets/6375258/1993872/76c07cb4-84e2-11e3-9637-20cae77f50bd.PNG"/>
 
-
 <h3><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>Example code</h3>
 <p>
+
+<TBD>
 
 See you soon ! 
 
