--- a/arduino.html
+++ b/arduino.html
@@ -65,8 +65,8 @@ Let's see how can the output value from a potentiometer can be read and logged i
 Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires <br><br>
 
 <font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB.<br>
-<font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & ouput.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor 
-and output pin to the digital pin 2. The wiring diagram is given below. <br>
+<font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, 
+power pin to 5V pin using 220 ohm resistor and output pin to the analog pin 2. The wiring diagram is given below. <br>
 <font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
 <font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
 <br>
@@ -79,7 +79,26 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
 <h3><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>Example code</h3>
 <p>
 
-<TBD>
+<code>
+/*
+  Reads an analog input on pin 2, prints the result to the serial monitor.
+*/
+
+// the setup routine runs once when you press reset:
+<font color="orange">void setup() </font>{
+  // initialize serial communication at 9600 bits per second:
+  Serial.begin(9600);
+}
+
+// the loop routine runs over and over again forever:
+<font color="orange">void loop() </font>{
+  // read the input on analog pin 2:
+  int sensorValue = analogRead(A2);
+  // print out the value you read:
+  Serial.println(sensorValue);
+  delay(1);
+}
+</code>
 
 See you soon ! 
 
