--- a/arduino.html
+++ b/arduino.html
@@ -83,23 +83,23 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
 /*
   Reads an analog input on pin 2, prints the result to the serial monitor.
 */
-
-// the setup routine runs once when you press reset:
-<font color="orange">void setup() </font>{
-  // initialize serial communication at 9600 bits per second:
-  Serial.begin(9600);
-}
-
-// the loop routine runs over and over again forever:
-<font color="orange">void loop() </font>{
-  // read the input on analog pin 2:
-  int sensorValue = analogRead(A2);
-  // print out the value you read:
-  Serial.println(sensorValue);
-  delay(1);
-}
+<br>
+// the setup routine runs once when you press reset:<br>
+<font color="orange">void setup() </font><br>{ <br>
+  // initialize serial communication at 9600 bits per second:<br>
+  Serial.begin(9600);<br>
+}<br>
+<br>
+// the loop routine runs over and over again forever:<br>
+<font color="orange">void loop() </font>{<br>
+  // read the input on analog pin 2:<br>
+  int sensorValue = analogRead(A2);<br>
+  // print out the value you read:<br>
+  Serial.println(sensorValue);<br>
+  delay(1);<br>
+}<br>
 </code>
-
+<br>
 See you soon ! 
 
 </p>
