--- a/arduino.html
+++ b/arduino.html
@@ -59,7 +59,7 @@ prepackaged in the sketch editor under the examples menu.
 Using these program sketches, variety of sensors can be controlled and the output from these sensors can also be read.  
 </p>
 
-<h3><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>Reading a value from the Potentiometer (POT)</h3>
+<h3><a name="section4" class="anchor" href="#section4"><span class="octicon octicon-link"></span></a>Reading a value from the Potentiometer (POT)</h3>
 <p>
 Let's see how can the output value from a potentiometer can be read and logged into serial monitor. <br>
 Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires <br><br>
@@ -74,11 +74,12 @@ power pin to 5V pin using 220 ohm resistor and output pin to the analog pin 2. T
 speed of a DC motor or control the direction of a SERVO motor. Options are plenty.</font></code>
 </p>
 
-<image src="https://f.cloud.github.com/assets/6375258/1993872/76c07cb4-84e2-11e3-9637-20cae77f50bd.PNG"/>
+<image src="/images/Arduino_Wiring.PNG"/>
 
-<h3><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>Example code</h3>
+<h3><a name="section5" class="anchor" href="#section5"><span class="octicon octicon-link"></span></a>Example code</h3>
 <p>
 
+<pre>
 <code>
 /*
   Reads an analog input on pin 2, prints the result to the serial monitor.
@@ -99,6 +100,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
   delay(1);<br>
 }<br>
 </code>
+</pre>
 <br>
 See you soon ! 
 
