--- a/arduino.html
+++ b/arduino.html
@@ -66,7 +66,7 @@ Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm re
 
 <font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB.<br>
 <font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, 
-power pin to 5V pin using 220 ohm resistor and output pin to the <pre><code>analog pin 2</code></pre>. The wiring diagram is given below.<br>
+power pin to 5V pin using 220 ohm resistor and output pin to the <font face="red">analog pin 2</font>. The wiring diagram is given below.<br>
 <font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
 <font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
 <br>
