--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Tech-noon</h1>
-          <!-- <h2 id="project_tagline">Technical Lessons</h2> -->
+          <h1 id="project_title">Technoon Tutorial</h1>
+          <h2 id="project_tagline">Node & MongoDB</h2>
 		</header>
-		<footer class="inner">
-			<p class="copyright"><font color="yellow">by Rajeshkumar Venkatesan</font></p>
-		</footer>
     </div>
 
 <!-- MAIN CONTENT -->
@@ -27,9 +24,7 @@
 
 <p>Technical Tutorials from Technoon. Lets go Technical !</p>
 <h3><a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Node.js, Express, EJS, Mongoose & MongoDB</h3>
-<p>This tutorial requires basic knowledge in Node.js & MongoDB.  The 'mongoose' node module can be used to access the MongoDB from Node.js.  Express is a 
-web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine.
-EJS is also a popular templating engine for Node.js. In this tutorial 'EJS' will be used as a templating engine.</p>
+<p>This tutorial requires basic knowledge in Node.js & MongoDB.  The 'mongoose' node module can be used to access the MongoDB from Node.js.  Express is a web application framework for Node.js, which provides the easy way to build web applications with multi pages.  Express comes with 'Jade', a templating engine. EJS is also a popular templating engine for Node.js. In this tutorial 'EJS' will be used as a templating engine.</p>
 
 <h3><a name="L1" class="anchor" href="#L1"><span class="octicon octicon-link"></span></a>How to use Express & EJS</h3>
 <p>Install the 'express' & 'ejs' node modules using the below commands.</p>
@@ -161,7 +156,7 @@ function renderResult(res, prds, msg) {
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
 <footer class="inner">
-	<p class="copyright">Technoon maintained by Rajeshkumar Venkatesan</p>
+	<p class="copyright">by Rajeshkumar Venkatesan</p>
 </footer>
 </div>
 
