--- a/arduino.html
+++ b/arduino.html
@@ -62,11 +62,11 @@ Using these program sketches, variety of sensors can be controlled and the outpu
 <h3><a name="section4" class="anchor" href="#section4"><span class="octicon octicon-link"></span></a>Reading a value from the Potentiometer (POT)</h3>
 <p>
 Let's see how can the output value from a potentiometer can be read and logged into serial monitor. <br>
-Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires <br><br>
+<font color="red">Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires </font><br><br>
 
 <font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB.<br>
 <font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, 
-power pin to 5V pin using 220 ohm resistor and output pin to the <font face="red">analog pin 2</font>. The wiring diagram is given below.<br>
+power pin to 5V pin using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. The wiring diagram is given below.<br>
 <font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
 <font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
 <br>
@@ -81,8 +81,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
 
 <h3><a name="section5" class="anchor" href="#section5"><span class="octicon octicon-link"></span></a>Example code</h3>
 <p>
-<pre>
-<code>
+<pre><code>
 /*
   Reads an analog input on pin 2, prints the result to the serial monitor.
 */
@@ -100,8 +99,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
   Serial.println(sensorValue);
   delay(1);
 }
-</code>
-</pre>
+</code></pre>
 <br>
 See you soon ! 
 </p>
