--- a/arduino.html
+++ b/arduino.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Tech-noon : Technical Noons" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>Technoon - Arduino </title>
+    <title>Technoon Tutorial - Arduino </title>
   </head>
 
   <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Technoon Tutorial - Arduino MicroController</h1>
+          <h1 id="project_title">Technoon Tutorial</h1>
+          <h2 id="project_tagline">Arduino MicroController</h2>
 		</header>
     </div>
 
@@ -20,10 +21,8 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 <h3><a name="section1" class="anchor" href="#section1"><span class="octicon octicon-link"></span></a>Welcome to Technoon Tutorials</h3>
-<p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.  
-It’s great for hardware prototyping and one-off projects. Arduino is a tool for making computers that can sense and control more of the physical world than your desktop computer.
-There are many other microcontrollers and microcontroller platforms available for physical computing. Arduino stands top of those platforms. 
-More details can be found in ardunino.cc.
+<p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.  It’s great for hardware prototyping and one-off projects. Arduino is a tool for making computers that can sense and control more of the physical world than your desktop computer.
+There are many other microcontrollers and microcontroller platforms available for physical computing. Arduino stands top of those platforms. More details can be found in <a href="http://arduino.cc">arduino.cc</a>.
 </p>
 
 <h3><a name="section2" class="anchor" href="#section2"><span class="octicon octicon-link"></span></a>PIN configuration in Ardunio Leonardo</h3>
@@ -52,9 +51,7 @@ More details can be found in ardunino.cc.
 Arduino provides an software to write a sketch (software program using wiring language) and burn into the flash memory of the microcontroller board. There are quite few examples
 prepackaged in the sketch editor under the examples menu.  
 </p>
-
 <image src="https://f.cloud.github.com/assets/6375258/1992705/a72ed29e-84c7-11e3-9780-3289e8f2fdf4.PNG"/>
-
 <p>
 Using these program sketches, variety of sensors can be controlled and the output from these sensors can also be read.  
 </p>
@@ -63,7 +60,6 @@ Using these program sketches, variety of sensors can be controlled and the outpu
 <p>
 Let's see how can the output value from a potentiometer can be read and logged into serial monitor. <br>
 <font color="red">Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires </font><br><br>
-
 <font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB.<br>
 <font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, 
 power pin to 5V pin using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. The wiring diagram is given below.<br>
