--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h2 id="project_tagline">Node & MongoDB</h2>
 	</header>
 
-	<table border=0 alight="right">
-		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Next : Arduino --> </a></td></tr>
+	<table border=0 align="right">
+		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"><font color="yellow">Next : Arduino --></font></a></td></tr>
 	</table>	
 </div>
 
@@ -158,7 +158,7 @@ function renderResult(res, prds, msg) {
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
 <footer class="inner">
-	<p class="copyright">by Rajeshkumar Venkatesan</p>
+	<p class="copyright"><font color="yellow">by Rajeshkumar Venkatesan</font></p>
 </footer>
 </div>
 
