--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<table border=0 align="right">
-		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"><font color="yellow">Next : Arduino --></font></a></td></tr>
+		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Tutorial : Arduino --></a></td></tr>
 	</table>	
 </div>
 
