--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h2 id="project_tagline">Node & MongoDB</h2>
 	</header>
 
-	<table border=0 align="left" bordercolor="grey">
-		<tr><td>Tutorials : </td></tr>
+	<table border=0 align="left">
+		<tr><td><b>Tutorials : </b></td></tr>
 		<tr><td>&nbsp;</td></tr>
 		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Arduino MicroController? </a></td></tr>
 		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Node & MongoDB</a></td></tr>
