--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<table border=0 align="left">
 		<tr><td><b>Tutorials : </b></td></tr>
 		<tr><td>&nbsp;</td></tr>
-		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Arduino MicroController? </a></td></tr>
+		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Arduino MicroController</a></td></tr>
 		<tr><td><a href="http://technoon.github.io/lessons/arduino.html">Node & MongoDB</a></td></tr>
 	</table>	
 </div>
