--- a/arduino.html
+++ b/arduino.html
@@ -15,9 +15,13 @@
           <h1 id="project_title">Technoon Tutorial</h1>
           <h2 id="project_tagline">Arduino MicroController</h2>
 		</header>
-  <table border=0 align="right">
-    <tr><td><a href="http://technoon.github.io/lessons/index.html">Tutorial : Node.js & Mongo --></a></td></tr>
+
+  <table align="left">
+    <tr><td><b>Tutorials : </b></td></tr>
+    <tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Arduino MicroController</a></td></tr>
+    <tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Node & MongoDB</a></td></tr>
   </table>
+  
 </div>
 
 <!-- MAIN CONTENT -->
