--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<table align="left">
-		<tr><td><b>Tutorials : </b></td></tr>
+		<tr><td id="project_tagline"><b><br>Tutorials : <br></b></td></tr>
 		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Arduino MicroController</a></td></tr>
 		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Node & MongoDB</a></td></tr>
 	</table>
