--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	</header>
 
 	<table align="left">
-		<tr><td id="project_tagline"><b><br>Tutorials : <br></b></td></tr>
-		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Arduino MicroController</a></td></tr>
-		<tr><td><a href="http://technoon.github.io/lessons/arduino.html"> Node & MongoDB</a></td></tr>
+		<tr><td style="font-family:comicsansms;font-size:15px;"><b><br>Tutorials : <br></b></td></tr>
+		<tr><td style="font-family:comicsansms;font-size:15px;"><a href="http://technoon.github.io/lessons/arduino.html"> Arduino MicroController</a></td></tr>
+		<tr><td style="font-family:comicsansms;font-size:15px;"><a href="http://technoon.github.io/lessons/index.html"> Node & MongoDB</a></td></tr>
 	</table>
 </div>
 
