--- a/newindex.html
+++ b/newindex.html
@@ -216,7 +216,7 @@ function renderResult(res, prds, msg) {
 <!-- Sidebar -->
     <aside class="large-3 columns">
  
-      <h5>Tutorials</h5>
+      <h5>Rajesh Writings : </h5>
       <ul class="side-nav">
         <li><a href="#">Node & MongoDB</a></li>
         <li><a href="#">Arduino Microcontroller</a></li>
