--- a/newindex.html
+++ b/newindex.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="large-6 columns">
-<img src="http://placehold.it/400x240&text=[img]"/>
+<img src="https://f.cloud.github.com/assets/6375258/2006535/271c92ae-871e-11e3-9577-1836f9609f35.PNG"/>
 </div>
 </div>
 
